Revert "Update index page's title"
This reverts commit 449a49ddbd547e1da834fc25f3c0f56f14112ed6.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Lily Cabot - the best UX/UI Designer - Paris/France</title>
+    <title>Lily Cabot - UX/UI Designer - Paris/France</title>
   </head>
 
   <body>
