--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <main>
       <div>
         <div>
-          <h1> About </h1>
+          <h1> A little bit about me </h1>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
                 </ul>
               </div>
             </div>
-          </div> 
+          </div>
         </div>
       </div>
     </main>
