Revert "add divs to index page"
This reverts commit c1dd3a095674591336a4d8d4884b628013fb67df.

--- a/index.html
+++ b/index.html
@@ -23,48 +23,46 @@
   <main>
 
     <div>
+
       <div>
         <h1>
           Hi, I'm Lily
-        <span> I'm a UX/UI designer based in Paris.</span>
+          <span> I'm a UX/UI designer based in Paris.</span>
         </h1>
         <p>On this website, I am showcasing some of the work that I’ve achieved throughout Careerfoundry’s UX Design course as well as outside of the curriculum.</p>
       </div>
-    </div>
 
       <div>
-        <div>
-          <h2> My Work </h2>
+        <h2> My Work </h2>
 
-          <div><!-- open row that holds (2) columns for project -->
-            <div><!-- open first column (used for image) -->
-              <picture>
-                <source srcset="https://via.placeholder.com/344x260" media="(max-width:767px)">
-                <img src="https://via.placeholder.com/444x334" alt="Qwest Mockups">
-              </picture>
-            </div><!-- end first column -->
-            <div><!-- open second column (used for text) -->
-                <h3> Qwest </h3>
-                <p>From investigation, to ideation, to validation, I designed Qwest, a scavenger hunt app where users can take part in readymade or customised hunts for real locations near them and embark on a fun and adventurous journey.</p>
-                <a href="qwest.html">View Project</a>
-            </div><!-- end second column -->
-          </div><!-- end row that holds (2) columns for project -->
-
-          <div><!-- open row that holds (2) columns for project -->
-            <div><!-- open first column (used for image) -->
-              <picture>
-                <source srcset="https://via.placeholder.com/344x260" media="(max-width:767)">
-                  <img src="https://via.placeholder.com/444x334" alt="Lemonaid Mockups">
-              </picture>
-            </div><!-- end first column -->
-            <div><!-- open second column (used for text) -->
-              <h3> Lemonaid </h3>
-              <p> By taking a mobile-first approach, I created the UI for Lemonaid, a friendly and intuitive responsive wed app that facilitates peer-to-peer learning.</p>
+        <div><!-- open row that holds (2) columns for project -->
+          <div><!-- open first column (used for image) -->
+            <picture>
+              <source srcset="https://via.placeholder.com/344x260" media="(max-width:767px)">
+              <img src="https://via.placeholder.com/444x334" alt="Qwest Mockups">
+            </picture>
+          </div><!-- end first column -->
+          <div><!-- open second column (used for text) -->
+              <h3> Qwest </h3>
+              <p>From investigation, to ideation, to validation, I designed Qwest, a scavenger hunt app where users can take part in readymade or customised hunts for real locations near them and embark on a fun and adventurous journey.</p>
               <a href="#">View Project</a>
-            </div><!-- end second column -->
-          </div><!-- end row that holds (2) columns for project -->
+          </div><!-- end second column -->
+        </div><!-- end row that holds (2) columns for project -->
 
-        </div>
+        <div><!-- open row that holds (2) columns for project -->
+          <div><!-- open first column (used for image) -->
+            <picture>
+              <source srcset="https://via.placeholder.com/344x260" medi a="(max-width:767)">
+                <img src="https://via.placeholder.com/444x334" alt="Lemonaid Mockups">
+            </picture>
+          </div><!-- end first column -->
+          <div><!-- open second column (used for text) -->
+            <h3> Lemonaid </h3>
+            <p> By taking a mobile-first approach, I created the UI for Lemonaid, a friendly and intuitive responsive wed app that facilitates peer-to-peer learning.</p>
+            <a href="#">View Project</a>
+          </div><!-- end second column -->
+        </div><!-- end row that holds (2) columns for project -->
+
       </div>
 
   </main>
