--- a/about.html
+++ b/about.html
@@ -1,106 +1,119 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Lily Cabot - UX/UI Designer - Paris/France</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-  </head>
 
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Lily Cabot - UX/UI Designer - Paris/France</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
 
-    <header>
-      <div>
-        <a href="#">Lily Cabot-King</a>
-        <nav>
-          <ul>
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
+<body>
+
+  <header>
+    <div class="container">
+      <a href="#" class="logo">Lily Cabot-King</a>
+      <nav>
+        <ul class="navigation">
+          <li><a href="index.html" id="navigation">Work</a></li>
+          <li><a href="about.html" id="navigation">About</a></li>
+          <li><a href="#contact" id="navigation">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div id="about">
+      <div class="container">
+        <h1> A little bit about me </h1>
       </div>
-    </header>
+    </div>
 
-    <main>
-      <div>
-        <div>
-          <h1> A little bit about me </h1>
-        </div>
-      </div>
-
-      <div>
-        <div>
+    <div id="story">
+      <div class="container">
           <picture>
-            <source srcset="https://via.placeholder.com/344x260" media="(max-width:767)">
-              <img src="https://via.placeholder.com/444x334" alt="Me">
+            <source srcset="img/about/me.jpg" media="(max-width:767px)">
+            <img src="img/about/me.jpg" alt="Me">
           </picture>
-          <div>
+        <div class="row">
+          <div class="column">
+            <h2>My Story</h2>
+            <p>Currently, I am finishing CareerFoundry’s UX Design course and working a full-time job in retail.</p>
+            <p>Prior to this, I studied a bachelor in Law at the University of York which I thoroughly enjoyed, even though I nearly didn’t make it out alive. What drew me to Law was both the intellectual challenge of solving legal issues and the
+              ability to help people. However, I later realised that the archaic and hierarchical way of working within a law firm was not at all suited for me.</p>
+            <p>It was during my last year of university that I discovered UX Design and was immediately drawn to it. Design thinking is often described as a methodology of solving problems in order to improve the quality of life for people, exactly
+              what I enjoyed about Law. However when we design, we bring about change - good and bad - and our responsibility, as designers, is to come up with a design that best addresses the issue in question, but which has the least negative
+              impact on society. The work of a designer is more complex than what we make it out to be and that is why I am attracted to a career in UX Design.</p>
+            <p>I feel that I am a great designer because I am three things: curious, creative and caring. Furthermore, I like to describe myself as collaborative as I really enjoy working within a team. I am also autonomous when I need to be. I have
+              keen eye for detail thanks to my law degree. Lastly but not least, I enjoy and am quite good at putting myself in other people's shoes. Where I currently work, I advise soon-to-be parents on the kind of products that will fulfill their
+              needs and fit their requirements. To be able to do this, I spent time talking to them to understand their situation and needs.</p>
+            <p>In my spare time, I eat, travel, 'Marie Kondo’ my apartment and listen to true crime podcasts.<p>
+              <div class="wrapper">
+                <a href="files/cv.pdf" class="button"> Download my CV</a>
+              </div>
+          </div>
+          <div class="column">
+            <h2>Skills & Tools</h2>
             <div>
-              <h2>My Story</h2>
-              <p>Currently, I am finishing CareerFoundry’s UX Design course and working a full-time job in retail.</p>
-              <p>Prior to this, I studied a bachelor in Law at the University of York which I thoroughly enjoyed, even though I nearly didn’t make it out alive. What drew me to Law was both the intellectual challenge of solving legal issues and the ability to help people. However, I later realised that the archaic and hierarchical way of working within a law firm was not at all suited for me.</p>
-              <p>It was during my last year of university that I discovered UX Design and was immediately drawn to it. Design thinking is often described as a methodology of solving problems in order to improve the quality of life for people, exactly what I enjoyed about Law. However when we design, we bring about change - good and bad - and our responsibility, as designers, is to come up with a design that best addresses the issue in question, but which has the least negative impact on society. The work of a designer is more complex than what we make it out to be and that is why I am attracted to a career in UX Design.</p>
-              <p>I feel that I am a great designer because I am three things: curious, creative and caring. Furthermore, I like to describe myself as collaborative as I really enjoy working within a team. I am also autonomous when I need to be. I have keen eye for detail thanks to my law degree. Lastly but not least, I enjoy and am quite good at putting myself in other people's shoes. Where I currently work, I advise soon-to-be parents on the kind of products that will fulfill their needs and fit their requirements. To be able to do this, I spent time talking to them to understand their situation and needs.</p>
-              <p>In my spare time, I eat, travel, 'Marie Kondo’ my apartment and listen to true crime podcasts.<p>
-
-              <a href="files/cv.pdf">My CV</a>
-            </div>
-            <div>
-              <h2>Skills & Tools</h2>
               <div>
-                <div>
-                  <h3> Relevant Skills</h3>
-                  <ul>
-                    <li>Users Research</li>
-                    <li>Analytical Skills</li>
-                    <li>Problem-solving</li>
-                    <li>Wireframing & Prototyping</li>
-                    <li>Information Architecture</li>
-                    <li>Visual Design</li>
-                    <li>HTML, CSS, and JavaScript</li>
-                    <li>Organisation</li>
-                    <li>Communication</li>
-                    <li>Interpersonal Skills</li>
-                    <li>Client-care</li>
-                  </ul>
-                </div>
-                <div>
-                  <h3>Tools I use</h3>
-                  <ul>
-                    <li>Sketch</li>
-                    <li>Illustrator</li>
-                    <li>Principle</li>
-                    <li>Invision</li>
-                    <li>Figma</li>
-                  </ul>
-                </div>
+                <h3> Relevant Skills</h3>
+                <ul>
+                  <li>Users Research</li>
+                  <li>Analytical Skills</li>
+                  <li>Problem-solving</li>
+                  <li>Wireframing & Prototyping</li>
+                  <li>Information Architecture</li>
+                  <li>Visual Design</li>
+                  <li>HTML, CSS, and JavaScript</li>
+                  <li>Organisation</li>
+                  <li>Communication</li>
+                  <li>Interpersonal Skills</li>
+                  <li>Client-care</li>
+                </ul>
+              </div>
+              <div>
+                <h3>Tools I use</h3>
+                <ul>
+                  <li>Sketch</li>
+                  <li>Illustrator</li>
+                  <li>Principle</li>
+                  <li>Invision</li>
+                  <li>Figma</li>
+                </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <footer id="contact">
+  <footer id="contact">
 
-      <div>
-        <h2> Contact Me </h2>
-        <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?</p>
-        <div>
-          <a href="mailto:l.cabotking29@gmail.com" class="button contact">Email me</a>
-        </div>
-        <div>
-          <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z"/><path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z"/></g></svg>
-        </div>
-        <p>Copyright Lily Cabot-King 2019-2020</p>
+    <div class="container">
+      <h2> Contact Me </h2>
+      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?</p>
+      <div class="wrapper">
+        <a href="mailto:l.cabotking29@gmail.com" class="button contact">Email me</a>
       </div>
+      <div class="wrapper">
+        <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <g>
+            <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
+            <path
+              d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z" />
+          </g>
+        </svg>
+      </div>
+      <p>Copyright Lily Cabot-King 2019-2020</p>
+    </div>
 
-    </footer>
+  </footer>
 
-  </body>
+</body>
 
 </html>
