Edit spacing, buttons, font on all pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>Lily Cabot - UX/UI Designer - Paris/France</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -42,18 +42,16 @@
         <div class="row">
           <div class="column">
             <h2>My Story</h2>
-            <p>Currently, I am finishing CareerFoundry’s UX Design course and working a full-time job in retail.</p>
+            <p>I am currently finishing CareerFoundry’s UX Design course and working a full-time job in retail.</p>
             <p>Prior to this, I studied a bachelor in Law at the University of York which I thoroughly enjoyed, even though I nearly didn’t make it out alive. What drew me to Law was both the intellectual challenge of solving legal issues and the
               ability to help people. However, I later realised that the archaic and hierarchical way of working within a law firm was not at all suited for me.</p>
             <p>It was during my last year of university that I discovered UX Design and was immediately drawn to it. Design thinking is often described as a methodology of solving problems in order to improve the quality of life for people, exactly
               what I enjoyed about Law. However when we design, we bring about change - good and bad - and our responsibility, as designers, is to come up with a design that best addresses the issue in question, but which has the least negative
               impact on society. The work of a designer is more complex than what we make it out to be and that is why I am attracted to a career in UX Design.</p>
-            <p>I feel that I am a great designer because I am three things: curious, creative and caring. Furthermore, I like to describe myself as collaborative as I really enjoy working within a team. I am also autonomous when I need to be. I have
-              keen eye for detail thanks to my law degree. Lastly but not least, I enjoy and am quite good at putting myself in other people's shoes. Where I currently work, I advise soon-to-be parents on the kind of products that will fulfill their
-              needs and fit their requirements. To be able to do this, I spent time talking to them to understand their situation and needs.</p>
+            <p>I feel that I am a great designer because I am three things: curious, creative and caring.</p>
             <p>In my spare time, I eat, travel, 'Marie Kondo’ my apartment and listen to true crime podcasts.<p>
-              <div class="wrapper">
-                <a href="files/cv.pdf" class="button"> Download my CV</a>
+              <div class="download">
+                <a href="files/cv.pdf"> Download my CV</a>
               </div>
           </div>
           <div class="column">
@@ -96,10 +94,7 @@
 
     <div class="container">
       <h2> Contact Me </h2>
-      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?</p>
-      <div class="wrapper">
-        <a href="mailto:l.cabotking29@gmail.com" class="button contact">Email me</a>
-      </div>
+      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email? <a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
       <div class="wrapper">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
