--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lily Cabot - UX/UI Designer - Paris/France</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -35,7 +35,7 @@
           Hi, I'm Lily
           <span> I'm a UX/UI designer based in Paris.</span>
         </h1>
-        <p>On this website, I am showcasing some of the work that I’ve achieved throughout Careerfoundry’s UX Design course.</p>
+        <p>On this website, I am showcasing the work that I’ve achieved throughout Careerfoundry’s UX Design course.</p>
       </div>
     </div>
 
@@ -47,16 +47,18 @@
           <!-- open row that holds (2) columns for project -->
           <div class="column">
             <!-- open first column (used for image) -->
+            <div class="indeximg1">
             <picture>
-              <source srcset="https://via.placeholder.com/344x260" media="(max-width:767px)">
-              <img src="https://via.placeholder.com/444x334" alt="Qwest Mockups">
+              <source srcset="img/index/imageqwest@1x.jpg" media="(max-width:767px)">
+              <img src="img/index/imageqwest@2x.jpg" alt="Qwest's Mockups">
             </picture>
+          </div>
           </div><!-- end first column -->
           <div class="column">
             <!-- open second column (used for text) -->
             <h3> Qwest </h3>
             <p>From investigation, to ideation, to validation, I designed Qwest, a scavenger hunt app where users can take part in readymade or customised hunts for real locations near them and embark on a fun and adventurous journey.</p>
-            <a href="qwest.html" class="button">View Project</a>
+            <a href="qwest.html" class="button2">View Project</a>
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
 
@@ -64,16 +66,18 @@
           <!-- open row that holds (2) columns for project -->
           <div class="column">
             <!-- open first column (used for image) -->
+            <div class="indeximg2">
             <picture>
-              <source srcset="https://via.placeholder.com/344x260" media="(max-width:767px)">
-              <img src="https://via.placeholder.com/444x334" alt="Lemonaid Mockups">
+              <source srcset="img/index/imagelemonaid@1x.jpg" media="(max-width:767px)">
+              <img src="img/index/imagelemonaid@2x.jpg" alt="Qwest's Mockups">
             </picture>
+          </div>
           </div><!-- end first column -->
           <div class="column">
             <!-- open second column (used for text) -->
             <h3> Lemonaid </h3>
             <p> By taking a mobile-first approach, I created the UI for Lemonaid, a friendly and intuitive responsive wed app that facilitates peer-to-peer learning.</p>
-            <a href="#" class="button">View Project</a>
+            <a href="#" class="button3">View Project</a>
           </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
 
@@ -85,10 +89,7 @@
   <footer id="contact">
     <div class="container">
       <h2> Contact Me </h2>
-      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?</p>
-      <div class="wrapper">
-        <a href="mailto:l.cabotking29@gmail.com" class="button contact">Email me</a>
-      </div>
+      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email? <a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
       <div class="wrapper">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
