--- a/qwest.html
+++ b/qwest.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Lily Cabot - UX/UI Designer - Paris/France</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -249,7 +249,7 @@
           <div class="designpattern">
             <picture>
               <source srcset="img/qwest/mobile/autocomplete@2x.png" media="(max-width:767px)">
-              <img src="img/qwest/desktop/autocomplete1@3x.png" alt="Autocomplete Wireframe">
+              <img src="img/qwest/desktop/autocomplete@3x.png" alt="Autocomplete Wireframe">
             </picture>
           </div>
           <div>
@@ -328,7 +328,7 @@
             <div class="iterations">
             <picture>
               <source srcset="img/qwest/mobile/problem1@2x.jpg" media="(max-width:767px)">
-              <img src="img/qwest/desktop/problem1.1@3x.jpg" alt="Problem #1 Wireframe">
+              <img src="img/qwest/desktop/problem1@3x.jpg" alt="Problem #1 Wireframe">
             </picture>
             </div>
           </div>
@@ -364,7 +364,7 @@
             <div class="iterations">
             <picture>
               <source srcset="img/qwest/mobile/solution1@2x.jpg" media="(max-width:767px)">
-              <img src="img/qwest/desktop/solution1.1@3x.jpg" alt="Solution #1 Wireframe">
+              <img src="img/qwest/desktop/solution1@3x.jpg" alt="Solution #1 Wireframe">
             </picture>
             </div>
           </div>
@@ -382,7 +382,7 @@
             <div class="iterations">
             <picture>
               <source srcset="img/qwest/mobile/solution2@2x.jpg" media="(max-width:767px)">
-              <img src="img/qwest/desktop/solution2.1@3x.jpg" alt="Final Solution Wireframe">
+              <img src="img/qwest/desktop/solution2@3x.jpg" alt="Final Solution Wireframe">
             </picture>
             </div>
           </div>
@@ -423,10 +423,7 @@
 
     <div class="container">
       <h2> Contact Me </h2>
-      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?</p>
-      <div class="wrapper">
-        <a href="mailto:l.cabotking29@gmail.com" class="button contact">Email me</a>
-      </div>
+      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?<a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
       <div class="wrapper">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
