--- a/qwest.html
+++ b/qwest.html
@@ -31,10 +31,12 @@
     <div id="introbackgroundqwest" >
       <div class="container">
         <h1> How might we help tourists and locals explore and interact with their surroundings in a fun and educative way? </h1>
-        <picture>
+        <div class="qwestlogo">
+          <picture>
           <source srcset="img/qwest/mobile/qwestlogo@2x.png" media="(max-width:767px)">
           <img src="img/qwest/desktop/qwestlogo@3x.png" alt="Qwest Logo">
         </picture>
+        </div>
         <p>
           A scavenger hunt app which enables its users to take part in ready-made or customisable hunts for real location near them and interact with these locations through a variety of challenges.
         </p>
@@ -59,11 +61,11 @@
 
         <h2> Research </h2>
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> Affinity Map </h3>
           </div>
           <div class="process">
-            <p>
+            <p class="col-md-6 col-md-5">
               After conducting some user interviews, I compiled the data from those interviews into an affinity map. From this, I was able to extract the following user insights.
             </p>
           </div>
@@ -72,21 +74,10 @@
         <div>
           <h4> Interaction </h4>
           <div id="postit">
-            <div class="postit1">
-              <p>
-                When I would play Pokemon Go, I wouldn’t engage with my surroundings.
-              </p>
-            </div>
-            <div class="postit2">
-              <p>
-                When they’d be a pokemon nearby [in Pokemon Go], everyone would just stare at their phones.
-              </p>
-            </div>
-            <div class="postit3">
-              <p>
-                Pokemon Go created a bridge between the real and virtual world, but the experience is wholly through your phone.
-              </p>
-            </div>
+            <picture>
+              <source srcset="img/qwest/mobile/postits@2x.png" media="(max-width:639px)">
+              <img src="img/qwest/desktop/postits@3x.png" alt="post-its">
+            </picture>
           </div>
           <p class="insight1">
             Users want activities to extend beyond their screen. They want to interact with their surroundings and with their friends as they find the experience enjoyable and rewarding.
@@ -97,21 +88,10 @@
         <div>
           <h4> Authentic, Local Experience </h4>
           <div id="postit">
-            <div class="postit4">
-              <p>
-                I like going to places that locals would go to.
-              </p>
-            </div>
-            <div class="postit5">
-              <p>
-                [In Pokemon Go], they wouldn’t bring you to interesting/unique places.
-              </p>
-            </div>
-            <div class="postit6">
-              <p>
-                I always want to feel like a local but it’s not easy if you don’t know anyone.
-              </p>
-            </div>
+              <picture>
+                <source srcset="img/qwest/mobile/postits2@2x.png" media="(max-width:639px)">
+                <img src="img/qwest/desktop/postits2@3x.png" alt="post-its">
+              </picture>
           </div>
           <p class="insight2">
             Users want to visit local, interesting and unique locations. They want to have an authentic experience of the places they live in/travel to, in search for a more in depth understanding of those places.
@@ -127,10 +107,10 @@
         <h2> Analysis </h2>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> User Personas </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <p>
               The next step was to turn those insights into user personas that would capture the essence of my target audience.
             </p>
@@ -139,23 +119,23 @@
 
         <div class="personas">
           <picture>
-            <source srcset="img/qwest/mobile/AnaPersona@2x.jpg" media="(max-width:767px)">
+            <source srcset="img/qwest/mobile/AnaPersona@2x.jpg" media="(max-width:639px)">
             <img src="img/qwest/desktop/anapersona@3x.jpg" alt="Ana Marques">
           </picture>
         </div>
 
         <div class="personas">
           <picture>
-            <source srcset="img/qwest/mobile/paulpersona@2x.jpg" media="(max-width:767px)">
+            <source srcset="img/qwest/mobile/paulpersona@2x.jpg" media="(max-width:639px)">
             <img src="img/qwest/desktop/paulpersona@3x.jpg" alt="Paul Evans">
           </picture>
         </div>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> User Journey </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               I then created a user journey for each of my personas to visualise the process they would go through to accomplish their goal whilst using my app. Represented here is Ana’s journey.
             </p>
@@ -172,10 +152,12 @@
             <img src="img/qwest/desktop/userjourney@3x.jpg" alt="User Journey whilst Qwest">
           </picture>
           </div>
+          <div class="col-md-6 col-md-5">
           <p>
             I thought it would be interesting to contrast Ana’s user journey when she’s using Qwest to a typical sightseeing journey when she is not using my app. This highlighted the improvements I would be making with my app, particulary at the
             early stages of the journey.
           </p>
+          </div>
           <p class="usergoal">
             Ana just arrived at her hotel in Paris. Her goal is to find places to see around her hotel and explore that neighbourhood.
           </p>
@@ -196,10 +178,10 @@
         <h2> Design </h2>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> User Flow </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               From those user journeys, I came up with user flows. I had to think of every route my personas could take to accomplish their individual goal when using Qwest. Represented here is Ana’s user flow.
             </p>
@@ -217,10 +199,10 @@
         </div>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> Site Map </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               From those user journeys, I came up with user flows. I had to think of every route my personas could take to accomplish their individual goal when using Qwest. Represented here is Ana’s user flow.
             </p>
@@ -235,10 +217,10 @@
         </div>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> Design Pattern </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               When creating Qwest’s wireframes, I used various design patterns.
             </p>
@@ -246,13 +228,13 @@
         </div>
 
         <div>
-          <div class="designpattern">
+          <div class="designpattern col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/autocomplete@2x.png" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/autocomplete@2x.png" media="(max-width:639px)">
               <img src="img/qwest/desktop/autocomplete@3x.png" alt="Autocomplete Wireframe">
             </picture>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               For instance, I designed a search bar with autocomplete to help users search faster for a European city with hunts. I kept the suggestion list short so as to avoid overwhelming users, which was easy since not every city in Europe will
               have hunts. I also styled the entered and suggested terms differently in order to highlight their differences and made the suggested terms bolder to draw the users’ eyes to them since users already know what they have entered
@@ -262,13 +244,13 @@
         </div>
 
         <div>
-          <div class="designpattern">
+          <div class="designpattern col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/actionableresults@2x.png" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/actionableresults@2x.png" media="(max-width:639px)">
               <img src="img/qwest/desktop/actionableresults1@3x.png" alt="Actionable Results Wireframe">
             </picture>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               On the search results page, I designed actionable search results to allow users to perform certain tasks - saving, sharing and downloading - on hunts they were looking for without leaving the results page.
             </p>
@@ -276,13 +258,13 @@
         </div>
 
         <div>
-          <div class="designpattern">
+          <div class="designpattern col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/progressivedisclosure@2x.png" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/progressivedisclosure@2x.png" media="(max-width:639px)">
               <img src="img/qwest/desktop/progressivedisclosure1@3x.png" alt="Progressive Disclosure Wireframe">
             </picture>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               I used the design pattern of progressive disclosure to break down the advanced task of customising a hunt into under-standable smaller tasks in order to avoid overwhelming/confusing users.
             </p>
@@ -298,7 +280,7 @@
         <div>
           <h4> Complete a challenge </h4>
           <picture>
-            <source srcset="img/qwest/mobile/prototype@2x.png" media="(max-width:767px)">
+            <source srcset="img/qwest/mobile/prototype@2x.png" media="(max-width:639px)">
             <img src="img/qwest/desktop/prototype@3x.png" alt="Mid-Fidelity Prototype">
           </picture>
         </div>
@@ -312,10 +294,10 @@
         <h2> Usability Tests </h2>
 
         <div>
-          <div>
+          <div class="col-md-6 col-md-7">
             <h3> New Design Iteration </h3>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               I conducted some usability tests to test my mid-fidelity prototype. I analysed and reported my test findings on a rainbow spreadsheet. I then determined which errors in my interactive prototype were most critical and prioritised fixes.
             </p>
@@ -325,14 +307,14 @@
         <div>
           <div>
             <h4>Problem #1</h4>
-            <div class="iterations">
-            <picture>
-              <source srcset="img/qwest/mobile/problem1@2x.jpg" media="(max-width:767px)">
-              <img src="img/qwest/desktop/problem1@3x.jpg" alt="Problem #1 Wireframe">
-            </picture>
-            </div>
           </div>
-          <div>
+          <div class="iterations col-md-6 col-md-7">
+            <picture>
+              <source srcset="img/qwest/mobile/problem1@2x.jpg" media="(max-width:639px)">
+                <img src="img/qwest/desktop/problem1@3x.jpg" alt="Problem #1 Wireframe">
+              </picture>
+          </div>
+          <div class="col-md-6 col-md-5">
             <p>
               To most test participants it was not clear that the explanation for the search feature in the onboarding was being typed in the search bar. This was mostly due to the fact that I had not properly achieved the “typing” animation.
               However, this made me realised that my “original” animation was not just confusing but was also in-consistent with the rest of the onboarding which consisted of coach marks.
@@ -343,14 +325,14 @@
         <div>
           <div>
             <h4>Problem #2</h4>
-            <div class="iterations">
+          </div>
+          <div class="iterations col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/problem2@2x.jpg" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/problem2@2x.jpg" media="(max-width:639px)">
               <img src="img/qwest/desktop/problem2@3x.jpg" alt="Problem #2 Wireframe">
             </picture>
-            </div>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               I had not included any explanations for the “active hunt” button into the onboarding because I wanted to highlight only the two main features of the app - the search and customising features - but this turned out to be a mistake. Some
               test participants pointed out that there was no explanation for this button and none of them could figure out what it was for.
@@ -361,14 +343,14 @@
         <div>
           <div>
             <h4> First solution to problem #1 and #2 </h4>
-            <div class="iterations">
+          </div>
+          <div class="iterations col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/solution1@2x.jpg" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/solution1@2x.jpg" media="(max-width:639px)">
               <img src="img/qwest/desktop/solution1@3x.jpg" alt="Solution #1 Wireframe">
             </picture>
-            </div>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               My first solution to this problem was to redesign the onboarding so that the design was more consistent and included an explanation for the “Active hunt” button, which I also renamed “Ongoing hunt”. However, I was not very satisfied
               with this solution as I couldn’t ignore one of the test participants comment about how coach marks were not very useful, at least for the search bar and the “create hunt” button as both these elements were self-explanatory.
@@ -379,14 +361,14 @@
         <div>
           <div>
             <h4> Final solution to problem #1 and #2 </h4>
-            <div class="iterations">
+          </div>
+            <div class="iterations col-md-6 col-md-7">
             <picture>
-              <source srcset="img/qwest/mobile/solution2@2x.jpg" media="(max-width:767px)">
+              <source srcset="img/qwest/mobile/solution2@2x.jpg" media="(max-width:639px)">
               <img src="img/qwest/desktop/solution2@3x.jpg" alt="Final Solution Wireframe">
             </picture>
-            </div>
           </div>
-          <div>
+          <div class="col-md-6 col-md-5">
             <p>
               Instead of using coach marks, I decided to design a slide-through onboarding which highlights the main features of the app like I wanted originally. With this design, I was also able to include the sign up/log in feature which I had
               forgotten to include in my previous designs. As for an explanation for the “Ongoing hunt” button, I used the empty state of the screen to explain its purpose to new users.
@@ -403,9 +385,11 @@
 
     <div id="conclusion">
       <div class="container">
+        <div class="col-md-6 col-md-7">
 
         <h2> Conclusion </h2>
-        <div>
+        </div>
+        <div class="col-md-6 col-md-5">
           <p>
             I learnt a great deal whilst working on this app as this was my first UX project that I worked on as part Careerfoundry’s UX Design Course. I learnt how vital user research is as it helps place users at the centre of the project and
             provides the foundation for the initial design. In retrospect, I wish I had interviewed a few more people and taken the time to collect some quantitative data through a survey. This would have enabled me to support my interview findings
@@ -423,7 +407,7 @@
 
     <div class="container">
       <h2> Contact Me </h2>
-      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email?<a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
+      <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email? <a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
       <div class="wrapper">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
