--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
+<body id="about-page">
 
   <header>
     <div class="container">
@@ -54,10 +54,10 @@
                 <a href="files/cv.pdf"> Download my CV</a>
               </div>
           </div>
-          <div class="column">
+          <div>
             <h2>Skills & Tools</h2>
             <div>
-              <div>
+              <div class="col-md-6">
                 <h3> Relevant Skills</h3>
                 <ul>
                   <li>Users Research</li>
@@ -73,7 +73,7 @@
                   <li>Client-care</li>
                 </ul>
               </div>
-              <div>
+              <div class="col-md-6">
                 <h3>Tools I use</h3>
                 <ul>
                   <li>Sketch</li>
