--- a/qwest.html
+++ b/qwest.html
@@ -247,7 +247,7 @@
           <div class="designpattern col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/actionableresults@2x.png" media="(max-width:639px)">
-              <img src="img/qwest/desktop/actionableresults1@3x.png" alt="Actionable Results Wireframe">
+              <img src="img/qwest/desktop/actionableresults@3x.png" alt="Actionable Results Wireframe">
             </picture>
           </div>
           <div class="col-md-6 col-md-5">
@@ -261,7 +261,7 @@
           <div class="designpattern col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/progressivedisclosure@2x.png" media="(max-width:639px)">
-              <img src="img/qwest/desktop/progressivedisclosure1@3x.png" alt="Progressive Disclosure Wireframe">
+              <img src="img/qwest/desktop/progressivedisclosure@3x.png" alt="Progressive Disclosure Wireframe">
             </picture>
           </div>
           <div class="col-md-6 col-md-5">
@@ -422,7 +422,7 @@
       </p>
     </div>
   </footer>
-
+<script src="js/scripts.js"></script>
 </body>
 
 </html>
