--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
       <p>Copyright Lily Cabot-King 2019-2020</p>
     </div>
   </footer>
-
+<script src="js/script.js"></script>
 </body>
 
 </html>
