--- a/qwest.html
+++ b/qwest.html
@@ -60,7 +60,7 @@
       <div class="container">
 
         <h2> Research </h2>
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> Affinity Map </h3>
           </div>
@@ -73,7 +73,7 @@
 
         <div>
           <h4> Interaction </h4>
-          <div id="postit">
+          <div class="postit">
             <picture>
               <source srcset="img/qwest/mobile/postits@2x.png" media="(max-width:639px)">
               <img src="img/qwest/desktop/postits@3x.png" alt="post-its">
@@ -87,7 +87,7 @@
 
         <div>
           <h4> Authentic, Local Experience </h4>
-          <div id="postit">
+          <div  class="postit">
               <picture>
                 <source srcset="img/qwest/mobile/postits2@2x.png" media="(max-width:639px)">
                 <img src="img/qwest/desktop/postits2@3x.png" alt="post-its">
@@ -106,7 +106,7 @@
 
         <h2> Analysis </h2>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> User Personas </h3>
           </div>
@@ -131,7 +131,7 @@
           </picture>
         </div>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> User Journey </h3>
           </div>
@@ -152,7 +152,7 @@
             <img src="img/qwest/desktop/userjourney@3x.jpg" alt="User Journey whilst Qwest">
           </picture>
           </div>
-          <div class="col-md-6 col-md-5">
+          <div class="col-md-6 col-md-5 explanation">
           <p>
             I thought it would be interesting to contrast Ana’s user journey when she’s using Qwest to a typical sightseeing journey when she is not using my app. This highlighted the improvements I would be making with my app, particulary at the
             early stages of the journey.
@@ -177,7 +177,7 @@
 
         <h2> Design </h2>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> User Flow </h3>
           </div>
@@ -198,7 +198,7 @@
           </picture>
         </div>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> Site Map </h3>
           </div>
@@ -216,7 +216,7 @@
           </picture>
         </div>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> Design Pattern </h3>
           </div>
@@ -227,7 +227,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="row">
           <div class="designpattern col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/autocomplete@2x.png" media="(max-width:639px)">
@@ -243,7 +243,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="row">
           <div class="designpattern col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/actionableresults@2x.png" media="(max-width:639px)">
@@ -257,7 +257,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="row">
           <div class="designpattern col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/progressivedisclosure@2x.png" media="(max-width:639px)">
@@ -293,7 +293,7 @@
 
         <h2> Usability Tests </h2>
 
-        <div>
+        <div class="row">
           <div class="col-md-6 col-md-7">
             <h3> New Design Iteration </h3>
           </div>
@@ -308,7 +308,8 @@
           <div>
             <h4>Problem #1</h4>
           </div>
-          <div class="iterations col-md-6 col-md-7">
+          <div class="row">
+          <div class="col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/problem1@2x.jpg" media="(max-width:639px)">
                 <img src="img/qwest/desktop/problem1@3x.jpg" alt="Problem #1 Wireframe">
@@ -317,8 +318,9 @@
           <div class="col-md-6 col-md-5">
             <p>
               To most test participants it was not clear that the explanation for the search feature in the onboarding was being typed in the search bar. This was mostly due to the fact that I had not properly achieved the “typing” animation.
-              However, this made me realised that my “original” animation was not just confusing but was also in-consistent with the rest of the onboarding which consisted of coach marks.
+              However, this made me realised that my “original” animation was not just confusing but was also inconsistent with the rest of the onboarding which consisted of coach marks.
             </p>
+          </div>
           </div>
         </div>
 
@@ -326,24 +328,29 @@
           <div>
             <h4>Problem #2</h4>
           </div>
-          <div class="iterations col-md-6 col-md-7">
-            <picture>
-              <source srcset="img/qwest/mobile/problem2@2x.jpg" media="(max-width:639px)">
-              <img src="img/qwest/desktop/problem2@3x.jpg" alt="Problem #2 Wireframe">
-            </picture>
-          </div>
-          <div class="col-md-6 col-md-5">
+
+          <div class="row">
+            <div class="col-md-6 col-md-7">
+              <picture>
+                <source srcset="img/qwest/mobile/problem2@2x.png" media="(max-width:639px)">
+                  <img src="img/qwest/desktop/problem2@3x.png" alt="Problem #2 Wireframe">
+                </picture>
+            </div>
+            <div class="col-md-6 col-md-5">
             <p>
               I had not included any explanations for the “active hunt” button into the onboarding because I wanted to highlight only the two main features of the app - the search and customising features - but this turned out to be a mistake. Some
               test participants pointed out that there was no explanation for this button and none of them could figure out what it was for.
             </p>
           </div>
+          </div>
+
         </div>
 
         <div>
           <div>
             <h4> First solution to problem #1 and #2 </h4>
           </div>
+          <div class="row">
           <div class="iterations col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/solution1@2x.jpg" media="(max-width:639px)">
@@ -356,12 +363,14 @@
               with this solution as I couldn’t ignore one of the test participants comment about how coach marks were not very useful, at least for the search bar and the “create hunt” button as both these elements were self-explanatory.
             </p>
           </div>
+          </div>
         </div>
 
         <div>
           <div>
             <h4> Final solution to problem #1 and #2 </h4>
           </div>
+          <div class="row">
             <div class="iterations col-md-6 col-md-7">
             <picture>
               <source srcset="img/qwest/mobile/solution2@2x.jpg" media="(max-width:639px)">
@@ -374,6 +383,7 @@
               forgotten to include in my previous designs. As for an explanation for the “Ongoing hunt” button, I used the empty state of the screen to explain its purpose to new users.
             </p>
           </div>
+          </div>
         </div>
 
         <div class="prototypelink">
@@ -383,8 +393,8 @@
       </div>
     </div>
 
-    <div id="conclusion">
-      <div class="container">
+    <div id="conclusion" class="container">
+      <div class="row">
         <div class="col-md-6 col-md-7">
 
         <h2> Conclusion </h2>
@@ -408,7 +418,7 @@
     <div class="container">
       <h2> Contact Me </h2>
       <p>Do you like my work and are interested in discussing work opportunities? Please get in touch. Call: <a href="tel:+33658760296">+33 6 58 76 02 96</a>. Prefer shooting me an email? <a href="mailto:l.cabotking29@gmail.com">Email me</a></p>
-      <div class="wrapper">
+      <div class="social">
         <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <g>
             <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
