--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <script src="https://kit.fontawesome.com/d6d4546d0f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -15,14 +16,17 @@
 
   <header>
     <div class="container">
+      <div id="myNavtoggle" class="navtoggle">
       <a href="#" class="logo">Lily Cabot-King</a>
       <nav>
         <ul class="navigation">
           <li><a href="index.html" id="navigation">Work</a></li>
           <li><a href="about.html" id="navigation">About</a></li>
-          <li><a href="#contact" id="navigation">Contact</a></li>
+          <li><a href="#contact" id="navigation" onclick="myFunction()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
 
@@ -108,6 +112,10 @@
     </div>
 
   </footer>
+  <script
+  			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  			  crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 
