--- a/qwest.html
+++ b/qwest.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <script src="https://kit.fontawesome.com/d6d4546d0f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -15,14 +16,17 @@
 
   <header>
     <div class="container">
+      <div id="myNavtoggle" class="navtoggle">
       <a href="#" class="logo">Lily Cabot-King</a>
       <nav>
         <ul class="navigation">
           <li><a href="index.html" id="navigation">Work</a></li>
           <li><a href="about.html" id="navigation">About</a></li>
-          <li><a href="#contact" id="navigation">Contact</a></li>
+          <li><a href="#contact" id="navigation" onclick="myFunction()">Contact</a></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
         </ul>
       </nav>
+    </div>
     </div>
   </header>
 
@@ -152,8 +156,8 @@
             <img src="img/qwest/desktop/userjourney@3x.jpg" alt="User Journey whilst Qwest">
           </picture>
           </div>
-          <div class="col-md-6 col-md-5 explanation">
-          <p>
+          <div class="row">
+          <p class="col-md-6 col-md-5 explanation">
             I thought it would be interesting to contrast Ana’s user journey when she’s using Qwest to a typical sightseeing journey when she is not using my app. This highlighted the improvements I would be making with my app, particulary at the
             early stages of the journey.
           </p>
@@ -432,6 +436,10 @@
       </p>
     </div>
   </footer>
+  <script
+  			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  			  crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
 </body>
 
